# ralleh-voice

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml
deploy/caddy/: ralleh-voice.caddy
deploy/systemd/: ralleh-voice.service
docs/: adapter-openclaw-bridge.md  adapter-real-models.md  architecture.md  code-review-2026-06.md  deploy-contract.md  operations.md  provisioning-integration.md  real-adapter-rehearsal-plan.md  security.md  ux-control-room-spec.md  ws-signed-token.md
ralleh_voice/: __init__.py  app.py  auth_tokens.py  config.py  events.py  interfaces.py  pipeline.py  rate_limits.py
ralleh_voice/adapters/: __init__.py  deterministic.py  errors.py  factory.py  faster_whisper_stt.py  kokoro_tts.py  openclaw_bridge.py  silero_vad.py
requirements/audit/: voice-direct-baseline.txt
scripts/: install.sh  smoke_check.py
static/: index.html
tests/: test_adapters.py  test_app_factory.py  test_app_security.py  test_auth_tokens.py  test_config.py  test_event_contract.py  test_health.py  test_openclaw_bridge.py  test_pipeline.py  test_rate_limits.py  test_smoke_check.py  test_ws_contract.py
