[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralleh-voice"
version = "0.2.2"
description = "Ralleh Voice standalone gateway foundation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ralleh AI" }]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0"
]
voice = [
  "torch>=2.3,<3.0",
  "faster-whisper>=1.0,<2.0",
  "kokoro>=0.9,<1.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ralleh_voice*"]
